--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js"
+        "start": "npm start"
     },
     "repository": {
         "type": "git",
@@ -28,6 +28,7 @@
     "dependencies": {
         "aos": "^3.0.0-beta.6",
         "bootstrap": "^4.3.1",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "mdi": "^2.2.43",
         "owl.carousel": "^2.3.4",
